--- a/html/tables.html
+++ b/html/tables.html
@@ -4,18 +4,16 @@
         <title>tables</title>
         </head><body>
             <style>
-                table,th,td{
+                table, td{
                     border: 1px solid black;
+                    border-collapse: collapse;
                 }
                 table.center{
                     margin-left: auto;
                     margin-right: auto;
                     width: 800px;
                 }
-                th,td{
-                    padding: 20px;
-                
-                }
+        
             </style>
             +
                <table class="center"> 
