--- a/html/intro.html
+++ b/html/intro.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>
-            <b><i>welcome</i></b>
+            <b><i>wel</i></b>
         </h1>
         </body>
 </html>
