successfully added grid

--- a/html/div/centre-allign.html
+++ b/html/div/centre-allign.html
@@ -1,11 +1,14 @@
 <html>
-  <style>
-    div {
-      width: 300px;
-      margin: 300px;
-      background-color: #fff4a3;
-    }
-  </style>
+  <head>
+    <title>centre-allign</title>
+    <style>
+      div {
+        width: 300px;
+        margin: 300px;
+        background-color: #fff4a3;
+      }
+    </style>
+  </head>
   <body>
     <div>
       <p>good morning</p>
