--- a/html/div/div.html
+++ b/html/div/div.html
@@ -1,9 +1,12 @@
 <html>
-  <style>
-    div {
-      background-color: red;
-    }
-  </style>
+  <head>
+    <title>div</title>
+    <style>
+      div {
+        background-color: red;
+      }
+    </style>
+  </head>
   <body>
     <div>
       <p>hello world</p>
