--- a/html/list/discription-list.html
+++ b/html/list/discription-list.html
@@ -1,9 +1,10 @@
 <html>
   <body>
     <h2>Description List</h2>
-
     <dl>
-      <dt>Coffee</dt>
+      <dt>
+        CoffeeCoffeeCoffeeCoffeeCoffeeCoffeeCoffeeCoffeeCoffeeCoffeeCoffeeCoffeeCoffeeCoffeeCoffeeCoffeeCoffeeCoffeeCoffeeCoffeeCoffeeCoffeeCoffee
+      </dt>
       <dd>- black hot drink</dd>
       <dt>Milk</dt>
       <dd>- white cold drink</dd>
