--- a/html/table-styling/hover.html
+++ b/html/table-styling/hover.html
@@ -1,43 +1,48 @@
 <html>
-    <head>
-        <style>
-            table {
-            border: 1px solid black;    
-            border-collapse: collapse;
-            width: 100%;
-            }
-            th, td {
-            padding: 8px;
-            text-align: left;
-            border-bottom: 1px solid #DDD;
-            }
-            tr:hover {background-color: #D6EEEE;}
-        </style>
-    </head>
+  <head>
+    <style>
+      table {
+        border: 1px solid black;
+        border-collapse: collapse;
+        width: 100%;
+      }
 
-    <body>
-        <h2>Hoverable Table</h2>
-        <table>
-            <tr>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Points</th>
-            </tr>
-            <tr>
-                <td>chandan</td>
-                <td>goyal</td>
-                <td>1</td>
-            </tr>
-            <tr>
-                <td>mudit</td>
-                <td>bansal</td>
-                <td>2</td>
-            </tr>
-            <tr>
-                <td>jayant</td>
-                <td>sethia</td>
-                <td>3</td>
-            </tr>
-        </table>
-    </body>
+      th,
+      td {
+        padding: 8px;
+        text-align: left;
+        border-bottom: 1px solid #ddd;
+      }
+
+      tr:hover {
+        background-color: #d6eeee;
+      }
+    </style>
+  </head>
+
+  <body>
+    <h2>Hoverable Table</h2>
+    <table>
+      <tr>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Points</th>
+      </tr>
+      <tr>
+        <td>chandan</td>
+        <td>goyal</td>
+        <td>1</td>
+      </tr>
+      <tr>
+        <td>mudit</td>
+        <td>bansal</td>
+        <td>2</td>
+      </tr>
+      <tr>
+        <td>jayant</td>
+        <td>sethia</td>
+        <td>3</td>
+      </tr>
+    </table>
+  </body>
 </html>
