--- a/html/table-styling/ver-horzstrips.html
+++ b/html/table-styling/ver-horzstrips.html
@@ -1,50 +1,53 @@
 <html>
-    <head>
-        <style>
-            table, th, td {
-            border: 1px solid black;
-            border-collapse: collapse;
-            padding: 15px;
-            }
-            tr:nth-child(even) {
-            background-color: blue;
-            }
-            th:nth-child(even),td:nth-child(even) {
-            background-color:gray;
-            }
-        </style>
-    </head>
+  <head>
+    <style>
+      table,
+      th,
+      td {
+        border: 1px solid black;
+        border-collapse: collapse;
+        padding: 15px;
+      }
+      tr:nth-child(even) {
+        background-color: blue;
+      }
+      th:nth-child(even),
+      td:nth-child(even) {
+        background-color: gray;
+      }
+    </style>
+  </head>
 
-    <body>
-        <h2>Striped Table</h2>
-        <table>
-            <tr>
-                <th>1</th>
-                <th>2</th>
-                <th>3</th>
-                <th>4</th>
-                <th>5</th>
-                <th>6</th>
-                <th>7</th>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-        </table>
-    </body>
+  <body>
+    <h2>Striped Table</h2>
+    <table>
+      <tr>
+        <th>1</th>
+        <th>2</th>
+        <th>3</th>
+        <th>4</th>
+        <th>5</th>
+        <th>6</th>
+        <th>7</th>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </table>
+  </body>
 </html>
