--- a/html/bordercolor.html
+++ b/html/bordercolor.html
@@ -1,46 +1,52 @@
 <html>
-    <head>
+
+<head>
     <title>
         border color
     </title>
     <style>
-        table,tr,th{
+        table,
+        tr,
+        th {
             border: 1px solid white;
-            margin:200px;
+            margin: 200px;
             border-collapse: collapse;
 
         }
-        tr,th{
+
+        tr,
+        th {
             padding: 26px;
             background-color: red;
         }
     </style>
-    </head>
-    <body>
-        <table>
-            <tr>
-                <th>name</th>
-                <th>class</th>
-                <th>subject</th>
+</head>
 
-            </tr>
-            <tr>
-                <th>chandan</th>
-                <th>mca</th>
-                <th>python</th>
-            </tr>
-            <tr>
-                <th>mudit</th>
-                <th>mca</th>
-                <th>java</th>
-            </tr>
-            <tr>
-                <th>jayant</th>
-                <th>mca</th>
-                <th>science</th>
-            </tr>
-        </table>
+<body>
+    <table>
+        <tr>
+            <th>name</th>
+            <th>class</th>
+            <th>subject</th>
 
-    </body>
+        </tr>
+        <tr>
+            <th>chandan</th>
+            <th>mca</th>
+            <th>python</th>
+        </tr>
+        <tr>
+            <th>mudit</th>
+            <th>mca</th>
+            <th>java</th>
+        </tr>
+        <tr>
+            <th>jayant</th>
+            <th>mca</th>
+            <th>science</th>
+        </tr>
+    </table>
+
+</body>
 
 </html>
